--- a/Crypto/MainWindow.xaml
+++ b/Crypto/MainWindow.xaml
@@ -7,6 +7,22 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <ListBox d:ItemsSource="{d:SampleData ItemCount=5}" SelectionChanged="ListBox_SelectionChanged" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,65,0,0" Height="340" Width="187" FontSize="18"/>
+        <TextBox HorizontalAlignment="Left" Margin="10,26,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="138" TextChanged="TextBox_TextChanged" Height="34"/>
+        <Button Content="Search" HorizontalAlignment="Left" Margin="157,26,0,0" VerticalAlignment="Top" Height="34"/>
+        <Label Content="" HorizontalAlignment="Center" Margin="0,30,0,0" VerticalAlignment="Top" Height="50" Width="280" FontSize="24" Background="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"/>
+        <Image HorizontalAlignment="Left" Height="100" Margin="625,30,0,0" VerticalAlignment="Top" Width="100" OpacityMask="Black"/>
+        <Label Content="Current price:" HorizontalAlignment="Center" Margin="0,110,0,0" VerticalAlignment="Top" Width="280" Height="36" Background="#FFB9BDDA" FontSize="20"/>
+        <Label Content="Price change for 24h():" HorizontalAlignment="Center" Margin="0,165,0,0" VerticalAlignment="Top" Width="280" Height="36" Background="#FFB9BDDA" FontSize="20"/>
+        <Label Content="Volume:" HorizontalAlignment="Center" Margin="0,217,0,0" VerticalAlignment="Top" Width="280" Height="36" Background="#FFB9BDDA" FontSize="20"/>
+        <Ellipse x:Name="Status" HorizontalAlignment="Left" Height="12" Margin="778,415,0,0" VerticalAlignment="Top" Width="12" RenderTransformOrigin="3.159,6.074" Fill="#FFE6156B">
+            <Ellipse.Stroke>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="White" Offset="1"/>
+                </LinearGradientBrush>
+            </Ellipse.Stroke>
+        </Ellipse>
 
     </Grid>
 </Window>
